<resources>
<!--    1. xml 별-->
<!--    2. activity 별-->
<!--    3. dialog 별 -->


    <string name="app_name">KoSalaam</string>

<!--    exception toast message-->
    <string name="check_your_interent">Check your internet!</string>

    <!--   sign in / sign up -->

    <string name="login_signUp">Sign Up</string>
    <string name="login_signIn">Log in with Email</string>
    <string name="login_facebook">Continue with Facebook</string>
    <string name="login_google">Continue with Google</string>
    <string name = "login_findTravle">Find the\nBest Way\nto Enjoy\nYour Travel\nin Korea</string>
    <string name="signUp_sign_up">Sign Up</string>
    <string name="signUp_enter_email">Enter your email Address</string>
    <string name="signUp_enter_verification">Enter the Verification number</string>
    <string name="signUp_wrong_num">Wrong number!</string>
    <string name="signUp_enter_password">Enter your passwords</string>
    <string name="signUp_certify_password">Certify your passwords</string>
    <string name="signUp_next">Next</string>
    <string name="signUp_already">I already have an account</string>
    <string name="loginIn_login">Log in</string>
    <string name="loginIn_enter_email">Enter your email</string>
    <string name="loginIn_forgot_password">Forgot Passwords</string>
    <string name="signUp_success">Sign up success</string>
    <string name="signUp_fail">Sign up failed</string>
    <string name="signUp_sign_in">Sign In</string>

<!--   -->


    <string name="main_assalam">As-salamu\nalaykum!</string>
    <string name="main_welcomeTo">Welecome to Korea</string>
    <string name="main_search_nearby">Search Nearby</string>
    <string name="main_prayer_room">Prayer Room</string>
    <string name="main_hotel">Hotel</string>
    <string name="main_restaurant">Restaurant</string>
    <string name="main_prayer_time">Pray Time</string>
    <string name="main_activities">Activities</string>
    <string name="main_travel_magazine">Travel Magazine</string>
    <string name="main_magazine_newMagazine">New Magazine</string>
    <string name="main_magazine_mostView">Most viewed</string>
    <string name="main_magazine_tour">Tour</string>
    <string name="main_magazine_food">food</string>
    <string name="main_magazine_kpop">K-POP</string>
    <string name="main_top_rate_magazine">Top-rated Prayer Room</string>

<!--    search fragment-->

    <string name="search_recent">Recent Search</string>
    <string name="search_searchHint">Search Place</string>
    <string name="search_default">Search a Place or address</string>
    <string name="search_redo">Redo Search in This Area</string>
    <string name="search_deleteHistory">Delete History</string>

    <string name="restaurantInfo_affinity">Affinity</string>
    <string name="restaurantInfo_contact">Contact</string>
    <string name="restaurantInfo_openTime">Open Time</string>
    <string name="restaurantInfo_parkable">Parkable</string>
    <string name="restaurantInfo_gallery">Gallery</string>
    <string name="restaurantInfo_map">Map</string>
    <string name="restaurantInfo_review">Review</string>
    <string name="appFinish">Please click BACK again to exit</string>
    <string name="mypage_accountSetting">Account setting</string>
    <string name="mypage_personalInfomation">Personal information</string>
    <string name="mypage_hosting">Hosting</string>
    <string name="mypage_learnAbout">Learn about hosting</string>
    <string name="mypage_host_registration">Host registration</string>
    <string name="mypage_hosting_infomation">Hosting infomation</string>
    <string name="mypage_support">Support</string>
    <string name="mypage_getHelp">Get help</string>
    <string name="mypage_contactUs">Contact us</string>
    <string name="mypage_logout">Log out</string>
    <string name="mypage_privacyPolicy">Privacy policy</string>
    <string name="hostInfo_edit">Edit</string>
    <string name="hostInfo_hostingInfo">Hosting infomation</string>
    <string name="hostInfo_placeName">Place name</string>
    <string name="hostInfo_address">Address</string>
    <string name="hostInfo_phoneNum">Phone number</string>
    <string name="hostInfo_roomEquip">Room equipment</string>
    <string name="hostInfo_prayerWatch">Prayer Watch</string>
    <string name="hostInfo_quran">Quran</string>
    <string name="hostInfo_prayerMat">Prayer Mat</string>
    <string name="hostInfo_compass">Compass</string>
    <string name="hostInfo_washingRoom">Washing room</string>
    <string name="hostInfo_qibla">Qibla</string>
    <string name="hostInfo_prayerClother">Prayer Clothes</string>
    <string name="hostInfo_estimatedPrice">Estimated price</string>
    <string name="hostInfo_save">Save</string>
    <string name="userInfo_name">Name</string>
    <string name="userInfo_email">Email</string>
    <string name="userInfo_phoneNum">Phone number</string>
    <string name="userInfo_password">Password</string>
    <string name="userInfo_personalInfo">Personal infomation</string>
    <string name="changePassword_enter_new_pass">Enter a new password</string>
    <string name="changePassword_check_new_pass">Check a new password</string>
    <string name="changePassword_verify">Verify</string>
    <string name="changePassword_verify_password">Verify password</string>
    <string name="changePassword_enter_current">Enter your current password</string>
    <string name="changePassword_update_password">Update password</string>
    <string name="prayerRoomInfo_hostedBy">Hosted by</string>
    <string name="hostResister">Host Resistration</string>
    <string name="hostResister_enter_placeName">Enter your place name</string>
    <string name="hostResister_enter_address">Host Resistration</string>
    <string name="hostResister_enter_the_phoneNum">Enter the phone number</string>
    <string name="hostResister_roomStatus">Room Stauts</string>
    <string name="hostResister_enter_estimatedPrice">Enter the estimated Price</string>
    <string name="hostResister_enter_price">Enter the price</string>
    <string name="phoneNumRegistration">Phone number registration</string>
    <string name="phoneNumResgistration_enter_verify_your_account">Enter your phone number to verify your account</string>
    <string name="phoneNumRegistration_Enter_your_phoneNum">Enter your phone number</string>
    <string name="phoneNumRegistration_sendCode">Send Code</string>
    <string name="phoneNumRegistration_enter_verification">Enter the verification code</string>
    <string name="phoneNumRegistration_submit">Submit</string>
</resources>