<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="changePasswordVm"
            type="com.kosalaamInc.kosalaam.feature.main.myPageFragment.personalInfo.userInfoEdit.changePassword.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view1_changePassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,180:21.2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_changePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1_changePassword"
            app:layout_constraintWidth_percent="0.861">

            <ImageView
                app:layout_constraintDimensionRatio="H,4.8:8.2"
                android:id="@+id/iv_changePassword_backArrow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/back_arrow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.03" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view2_changePassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,180:8"
            app:layout_constraintTop_toBottomOf="@id/cl_changePassword" />

        <TextView
            android:id="@+id/tv_changePassword_verifypassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/changePassword_verify_password"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2_changePassword"
            app:layout_constraintWidth_percent="0.861" />

        <View
            android:id="@+id/view3_changePassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,180:17.5"
            app:layout_constraintTop_toBottomOf="@id/tv_changePassword_verifypassword" />

        <EditText
            android:afterTextChanged="@{(arg0)->changePasswordVm.onCurrentPassWordChanged(arg0)}"
            android:lines="1"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:id="@+id/et_changePassword_current"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/changePassword_enter_current"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3_changePassword"
            app:layout_constraintWidth_percent="0.861" />

        <EditText
            android:afterTextChanged="@{(arg0)->changePasswordVm.onPassWordChanged(arg0)}"
            android:visibility="gone"
            android:lines="1"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:id="@+id/et_changePassword_newpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/changePassword_enter_new_pass"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3_changePassword"
            app:layout_constraintWidth_percent="0.861" />

        <EditText
            android:afterTextChanged="@{(arg0)->changePasswordVm.onPassWordChangedCheck(arg0)}"
            android:visibility="gone"
            android:layout_marginTop="80dp"
            android:lines="1"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:id="@+id/et_changePassword_newpasswordCheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/changePassword_check_new_pass"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_changePassword_newpassword"
            app:layout_constraintWidth_percent="0.861" />
        <View
            android:visibility="gone"
            android:id="@+id/view5_changePassword"
            android:layout_marginTop="3dp"
            android:background="#f1f1f5"
            app:layout_constraintWidth_percent="0.861"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_changePassword_newpasswordCheck"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <View
            android:visibility="gone"
            android:id="@+id/view6_changePassword"
            android:layout_marginTop="3dp"
            android:background="#f1f1f5"
            app:layout_constraintWidth_percent="0.861"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_changePassword_newpassword"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <View
            android:id="@+id/view7_changePassword"
            android:layout_marginTop="3dp"
            android:background="#f1f1f5"
            app:layout_constraintWidth_percent="0.861"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_changePassword_current"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <View
            app:layout_constraintDimensionRatio="H,180:42.8"
            android:id="@+id/view4_changePassword"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tv_changePassword_verify"
            android:clickable="false"
            android:background="@drawable/login_defaultback"
            android:includeFontPadding="false"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="26dp"
            android:paddingLeft="26dp"
            android:textSize="16sp"
            android:textColor="#f1f1f5"
            android:text="@string/changePassword_verify"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view4_changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>