<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="phoneRegisterVm"
            type="com.kosalaamInc.kosalaam.feature.main.myPageFragment.phoneNumRegister.PhoneNumRegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view1_phoneRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,180:21.2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_phoneRegister_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/phoneNumRegistration"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1_phoneRegister"
            app:layout_constraintWidth_percent="0.861" />

        <View
            android:id="@+id/view2_phoneRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,180:17.5"
            app:layout_constraintTop_toBottomOf="@id/tv_phoneRegister_title" />

        <TextView
            android:id="@+id/tv_phoneRegister_selectCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/phoneNumResgistration_enter_verify_your_account"
            android:textColor="#717075"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2_phoneRegister"
            app:layout_constraintWidth_percent="0.861" />

        <View
            android:id="@+id/view3_phoneRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,180:7.2"
            app:layout_constraintTop_toBottomOf="@id/tv_phoneRegister_selectCountry" />

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3_phoneRegister"
            app:layout_constraintWidth_percent="0.861" />

        <View
            android:id="@+id/view4_phoneRegister"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#f1f1f5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_country"
            app:layout_constraintWidth_percent="0.861" />

        <View
            android:id="@+id/view5_phoneRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="180:14"
            app:layout_constraintTop_toBottomOf="@id/view4_phoneRegister" />

        <TextView
            android:id="@+id/tv_phoneRegister_countryCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view5_phoneRegister"
            app:layout_constraintWidth_percent="0.861" />

        <View
            app:layout_constraintWidth_percent="0.861"
            android:id="@+id/view6_phoneRegister"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#f1f1f5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phoneRegister_countryCode" />

        <View
            android:id="@+id/view7_phoneRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,180:13.8"
            app:layout_constraintTop_toBottomOf="@id/view6_phoneRegister" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_phoneNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view7_phoneRegister"
            app:layout_constraintWidth_percent="0.861">

            <EditText
                android:id="@+id/et_phoneRegister_phoneNum"
                android:layout_marginRight="19.6dp"
                app:layout_constraintRight_toLeftOf="@id/tv_phoneRegister_sendCode"
                android:background="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/phoneNumRegistration_Enter_your_phoneNum"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                android:layout_marginRight="19.6dp"
                android:background="#f1f1f5"
                app:layout_constraintRight_toRightOf="@id/et_phoneRegister_phoneNum"
                app:layout_constraintLeft_toLeftOf="@id/et_phoneRegister_phoneNum"
                app:layout_constraintTop_toBottomOf="@id/et_phoneRegister_phoneNum"
                android:layout_width="0dp"
                android:layout_height="1dp"/>

            <TextView
                android:paddingBottom="2.5dp"
                android:paddingTop="2.5dp"
                android:paddingLeft="6.4dp"
                android:paddingRight="6.4dp"
                android:fontFamily="@font/montserrat_bold"
                android:id="@+id/tv_phoneRegister_sendCode"
                android:background="@drawable/login_defaultback"
                android:textColor="#ffffff"
                android:text="@string/phoneNumRegistration_sendCode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view8_phoneRegister"
            app:layout_constraintDimensionRatio="H,180:25"
            app:layout_constraintTop_toBottomOf="@id/cl_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:fontFamily="@font/montserrat_semibold"
            app:layout_constraintWidth_percent="0.861"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view8_phoneRegister"
            android:id="@+id/tv_phoneRegister_enterVerify"
            android:text="@string/phoneNumRegistration_enter_verification"
            android:textSize="12sp"
            android:textColor="#717075"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/view9_phoneRegister"
            app:layout_constraintDimensionRatio="H,180:7.5"
            app:layout_constraintTop_toBottomOf="@id/tv_phoneRegister_enterVerify"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_phoneCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view9_phoneRegister"
            app:layout_constraintWidth_percent="0.861">

            <EditText
                android:id="@+id/et_phoneRegister_phoneCode"
                android:layout_marginRight="19.6dp"
                app:layout_constraintRight_toLeftOf="@id/tv_phoneRegister_submit"
                android:background="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="000000"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_marginRight="19.6dp"
                android:background="#f1f1f5"
                app:layout_constraintRight_toRightOf="@id/et_phoneRegister_phoneCode"
                app:layout_constraintLeft_toLeftOf="@id/et_phoneRegister_phoneCode"
                app:layout_constraintTop_toBottomOf="@id/et_phoneRegister_phoneCode"
                android:layout_width="0dp"
                android:layout_height="1dp"/>

            <TextView
                android:paddingBottom="2.5dp"
                android:paddingTop="2.5dp"
                android:paddingLeft="17.6dp"
                android:paddingRight="17.6dp"
                android:fontFamily="@font/montserrat_bold"
                android:id="@+id/tv_phoneRegister_submit"
                android:background="@drawable/login_defaultback"
                android:textColor="#ffffff"
                android:text="@string/phoneNumRegistration_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>